WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176746
REGRESSION (
r215784
): The title of right-to-left pages are empty
https://bugs.webkit.org/show_bug.cgi?id=176746
Summary
REGRESSION (r215784): The title of right-to-left pages are empty
Daniel Bates
Reported
2017-09-11 15:14:01 PDT
The title of right-to-left pages are empty.
Attachments
Patch and unit test
(6.45 KB, patch)
2017-09-11 16:06 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch and unit test
(9.79 KB, patch)
2017-09-11 16:11 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch and unit tests following r221921
(4.59 KB, patch)
2017-09-12 12:40 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2017-09-11 15:14:17 PDT
<
rdar://problem/34211419
>
Daniel Bates
Comment 2
2017-09-11 16:06:03 PDT
Created
attachment 320496
[details]
Patch and unit test
Daniel Bates
Comment 3
2017-09-11 16:11:33 PDT
Created
attachment 320497
[details]
Patch and unit test
Brent Fulgham
Comment 4
2017-09-11 16:42:17 PDT
Comment on
attachment 320497
[details]
Patch and unit test View in context:
https://bugs.webkit.org/attachment.cgi?id=320497&action=review
r=me
> Source/WebCore/platform/text/StringWithDirection.h:73 > + return { string.string.left(maxLength), string.direction };
:-( Sorry!
Daniel Bates
Comment 5
2017-09-12 09:34:32 PDT
Committed
r221921
: <
http://trac.webkit.org/changeset/221921
>
mitz
Comment 6
2017-09-12 09:42:45 PDT
Comment on
attachment 320497
[details]
Patch and unit test View in context:
https://bugs.webkit.org/attachment.cgi?id=320497&action=review
>> Source/WebCore/platform/text/StringWithDirection.h:73 >> + return { string.string.left(maxLength), string.direction }; > > :-( Sorry!
Can the result of this end with an unpaired surrogate?
Daniel Bates
Comment 7
2017-09-12 11:00:23 PDT
(In reply to mitz from
comment #6
)
> Comment on
attachment 320497
[details]
> Patch and unit test > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=320497&action=review
> > >> Source/WebCore/platform/text/StringWithDirection.h:73 > >> + return { string.string.left(maxLength), string.direction }; > > > > :-( Sorry! > > Can the result of this end with an unpaired surrogate?
Oops!
Daniel Bates
Comment 8
2017-09-12 12:40:46 PDT
Reopening to attach new patch.
Daniel Bates
Comment 9
2017-09-12 12:40:47 PDT
Created
attachment 320561
[details]
Patch and unit tests following
r221921
Daniel Bates
Comment 10
2017-09-12 12:50:40 PDT
Comment on
attachment 320561
[details]
Patch and unit tests following
r221921
This patch is wrong because a grapheme cluster can include arbitrary combining characters.
Daniel Bates
Comment 11
2017-09-12 12:59:29 PDT
Making this bug as resolved fix. Filed
bug #176795
to do the ideal fix of truncating the title with respect to the longest prefix of grapheme clusters.
Brent Fulgham
Comment 12
2017-09-25 12:28:43 PDT
***
Bug 177436
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug